[package]
name = "guard_plus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.7"
tonic-build = "0.7"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["add-extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
tokio-rustls = "0.23"
rustls = "0.20"
consul = "0.3"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
tonic-build         = "0.7"